Fix slider alignment.

--- a/app/static/css/search.css
+++ b/app/static/css/search.css
@@ -252,6 +252,8 @@ img.cover {
 .noUi-horizontal .noUi-handle {
     width: 20px;
     height: 20px;
+    right: 0px;
+    top: -6px;
 }
 
 .noUi-horizontal .noUi-tooltip {
